# blog.bythewood.me

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
content/posts/: a-status-line-for-claude-code.md  cool-uris-dont-change-unless-an-ai-rewrites-your-blog.md  optimizing-sqlite-for-django-in-production.md  the-rust-ecosystem-is-unreasonably-good.md  using-vite-with-django-in-2026.md
frontend/: package.json
frontend/static_src/: index.js
frontend/static_src/styles/: base.scss  post.scss
src/: app.rs  error.rs  main.rs  markdown.rs  middleware.rs  pdf.rs  posts.rs  render.rs
src/routes/: blog.rs  errors.rs  home.rs  mod.rs  post.rs  search.rs  seo.rs
templates/: base.html  blog_post.typ
